--- a/CHANGES.de
+++ b/CHANGES.de
@@ -1,6 +1,7 @@
 Alpha-Release NetHack-De 3.4.2-2008????a
  - ca. 60% des generierten Textes übersetzt
  - Bugfixes Win32-GUI
+ - Absturz beim Treten eines gerittenen, schlafenden Pferdes gefixt
 
 Alpha-Release NetHack-De 3.4.2-20080309a
  - ca. 50% des generierten Textes übersetzt
