--- a/AUTHORS.de
+++ b/AUTHORS.de
@@ -1,4 +1,4 @@
-Patric Mueller <bhaak@gmx.net> begann die Programmierung NetHack-de.
+Patric Mueller <bhaak@gmx.net> begann die Programmierung von NetHack-de.
 
 
 Dank an ...
