--- a/CHANGES.de
+++ b/CHANGES.de
@@ -1,4 +1,4 @@
-Alpha-Release NetHack-De 3.4.2-2008????a
+Alpha-Release NetHack-De 3.4.2-20080610a
  - ca. 60% des generierten Textes übersetzt
  - Bugfixes Win32-GUI
  - Absturz beim Treten eines gerittenen, schlafenden Pferdes gefixt
