konsistente Schreibung des Projektnamens

--- a/AUTHORS.de
+++ b/AUTHORS.de
@@ -1,11 +1,11 @@
-Patric Mueller <bhaak@gmx.net> begann die Programmierung von NetHack-de.
+Patric Mueller <bhaak@gmx.net> begann die Programmierung von NetHack-De.
 
 
 Dank an ...
 ===========
 
 Ray Chason für seine Arbeit an Spanish-NetHack[1], dessen
-Makefile-Modifikationen für NetHack-de übernommen wurden.
+Makefile-Modifikationen für NetHack-De übernommen wurden.
 
 
 Tony Crawford für sein "How I Build NetHack on Win32"[2] und der
