--- a/news
+++ b/news
@@ -1,4 +1,4 @@
-Achtung! Dies ist ein Alpha-Release von NetHack-de.
+Achtung! Dies ist ein Alpha-Release von NetHack-De.
 
 Fehlerberichte, Anregungen, Übersetzungsvorschläge oder Kritik können
 an meine E-Mail-Adresse geschickt werden oder auf
