--- a/CHANGES.de
+++ b/CHANGES.de
@@ -1,5 +1,7 @@
-Alpha-Release NetHack-De 3.4.3-????????a
+Alpha-Release NetHack-De 3.4.3-20080907a
+ - ca. 75% des generierten Textes übersetzt
  - Codebasis-Update auf 3.4.3
+ - Wünschen: keine Unterscheidung zwischen Gross-/Kleinschreibung und Umlauten
 
 Alpha-Release NetHack-De 3.4.2-20080610a
  - ca. 60% des generierten Textes übersetzt
