Astral Bug gefixt

--- a/CHANGES.de
+++ b/CHANGES.de
@@ -1,3 +1,6 @@
+Alpha-Release NetHack-De 3.4.3-200810??a
+ - "Astral Call Bug" gefixt
+
 Alpha-Release NetHack-De 3.4.3-20080907a
  - ca. 75% des generierten Textes übersetzt
  - Codebasis-Update auf 3.4.3
