Bugfix fuer C343-218, C343-275 and C343-276

--- a/CHANGES.de
+++ b/CHANGES.de
@@ -1,5 +1,6 @@
 Alpha-Release NetHack-De 3.4.3-200810??a
  - "Astral Call Bug" gefixt
+ - Bugfix für C343-218, C343-275, C343-276 und C343-324
 
 Alpha-Release NetHack-De 3.4.3-20080907a
  - ca. 75% des generierten Textes übersetzt
